--- a/data_process/check_data.ipynb
+++ b/data_process/check_data.ipynb
@@ -15,7 +15,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "'h:\\\\Codes\\\\PythonWorkspace\\\\TrafficFlowModel\\\\data_process'"
+       "'/home/cseadmin/data/cys/TrafficFlowModel/data_process'"
       ]
      },
      "metadata": {},
@@ -1654,6 +1654,14 @@
  ],
  "metadata": {
   "orig_nbformat": 4,
+  "kernelspec": {
+   "name": "conda-env-dz-py",
+   "display_name": "Python [conda env:dz] *",
+   "language": "python"
+  },
+  "interpreter": {
+   "hash": "4ce0e62306dd6a5716965d4519ada776f947e6dfc145b604b11307c10277ef29"
+  },
   "language_info": {
    "name": "python",
    "version": "3.8.5",
@@ -1665,13 +1673,6 @@
    "pygments_lexer": "ipython3",
    "nbconvert_exporter": "python",
    "file_extension": ".py"
-  },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.5 64-bit"
-  },
-  "interpreter": {
-   "hash": "4ce0e62306dd6a5716965d4519ada776f947e6dfc145b604b11307c10277ef29"
   }
  },
  "nbformat": 4,
