--- a/data_process/markov.ipynb
+++ b/data_process/markov.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
        "       [   0,    0,    0, ...,    0,    0,   23]], dtype=int32)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
        "       [  0,   0,   0, ...,   0,   0,   5]], dtype=int32)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,10 @@
     "\n",
     "def smape_no0(y_pred, y_true):\n",
     "    mask = (y_true + y_pred != 0)\n",
-    "    return 2.0 * np.mean(np.abs(y_pred[mask] - y_true[mask]) / (np.abs(y_pred[mask]) + np.abs(y_true[mask])))"
+    "    return 2.0 * np.mean(np.abs(y_pred[mask] - y_true[mask]) / (np.abs(y_pred[mask]) + np.abs(y_true[mask])))\n",
+    "\n",
+    "def maedivmean(y_pred, y_true):\n",
+    "    return mae(y_pred, y_true)/np.mean(y_true)"
    ]
   },
   {
@@ -318,15 +321,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def cal_error_next(n, pred, truth):\n",
-    "    print(\"RMSE = {}\".format(rmse(pred[n].sum(axis=0)/6, truth[n+1].sum(axis=1))), \"MAE = {}\".format(mae(pred[n].sum(axis=0)/6, truth[n+1].sum(axis=1))), sep=\"\\t\")\n",
+    "    print(\"RMSE = {}\".format(rmse(pred[n].sum(axis=0)/6, truth[n+1].sum(axis=1))), \"MAE = {}\".format(mae(pred[n].sum(axis=0)/6, truth[n+1].sum(axis=1))), \"MAE/mean = {}\".format(maedivmean(pred[n].sum(axis=0)/6, truth[n+1].sum(axis=1))), sep=\"\\t\")\n",
     "    \n",
     "def cal_error(n, pred, truth):\n",
-    "    print(\"RMSE = {}\".format(rmse(pred[n].sum(axis=0)/6, truth[n].sum(axis=1))), \"MAE = {}\".format(mae(pred[n].sum(axis=0)/6, truth[n].sum(axis=1))), sep=\"\\t\")\n",
+    "    print(\"RMSE = {}\".format(rmse(pred[n].sum(axis=0)/6, truth[n].sum(axis=1))), \"MAE = {}\".format(mae(pred[n].sum(axis=0)/6, truth[n].sum(axis=1))),\"MAE/mean = {}\".format(maedivmean(pred[n].sum(axis=0)/6, truth[n].sum(axis=1))), sep=\"\\t\")\n",
     "    \n",
     "def cal_error_comp(n, pred, truth):\n",
     "    print(\"RMSE = {}\".format(rmse(pred[n]/6, truth[n])), \"MAE = {}\".format(mae(pred[n]/6, truth[n])), sep=\"\\t\")\n",
@@ -391,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,6 +514,188 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16153"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "118"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "345"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2770"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2116"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "10791"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------------------------\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.970531789760416"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.9571596607441342"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.9349346870550362"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.8966755401473411"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.7990466167275428"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.6680492787717451"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.5618770507026558"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.3266266328236241"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(temp2)\n",
+    "np.sum(temp2>=300)\n",
+    "np.sum((temp2>=100) & (temp2<300))\n",
+    "np.sum((temp2>=50) & (temp2<100))\n",
+    "np.sum((temp2>=10) & (temp2<50))\n",
+    "np.sum((temp2>=5) & (temp2<10))\n",
+    "np.sum(temp2<5)\n",
+    "print(\"---------------------------\")\n",
+    "np.sum(temp2<50)/len(temp2)\n",
+    "np.sum(temp2<40)/len(temp2)\n",
+    "np.sum(temp2<30)/len(temp2)\n",
+    "np.sum(temp2<20)/len(temp2)\n",
+    "np.sum(temp2<10)/len(temp2)\n",
+    "np.sum(temp2<5)/len(temp2)\n",
+    "np.sum(temp2<3)/len(temp2)\n",
+    "np.sum(temp2<1)/len(temp2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 85,
    "metadata": {},
    "outputs": [
@@ -531,19 +716,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE = 23.622282058138694\tMAE = 7.098454363482532\n",
-      "RMSE = 20.814775944291085\tMAE = 8.644782187003445\n",
-      "RMSE = 23.650669921433195\tMAE = 8.447089291978786\n",
-      "RMSE = 20.576889119471772\tMAE = 8.24854000288904\n",
-      "RMSE = 16.51951798227317\tMAE = 6.9337377989640725\n",
-      "RMSE = 19.500113409490798\tMAE = 7.659867104149899\n"
+      "RMSE = 23.622282058138694\tMAE = 7.098454363482532\tMAE/mean = 0.5688469069164418\n",
+      "RMSE = 20.814775944291085\tMAE = 8.644782187003445\tMAE/mean = 0.4891861562247476\n",
+      "RMSE = 23.650669921433195\tMAE = 8.447089291978786\tMAE/mean = 0.3228325746319273\n",
+      "RMSE = 20.576889119471772\tMAE = 8.24854000288904\tMAE/mean = 0.2634752958128418\n",
+      "RMSE = 16.51951798227317\tMAE = 6.9337377989640725\tMAE/mean = 0.22156763443668082\n",
+      "RMSE = 19.500113409490798\tMAE = 7.659867104149899\tMAE/mean = 0.2560856559000023\n"
      ]
     }
    ],
@@ -554,20 +739,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE = 13.48852526426804\tMAE = 4.966631585464\n",
-      "RMSE = 11.65794211431183\tMAE = 3.855971027053798\n",
-      "RMSE = 28.63488349231344\tMAE = 10.297829092635011\n",
-      "RMSE = 26.797632083611315\tMAE = 9.645225861037167\n",
-      "RMSE = 14.394730473562012\tMAE = 6.324109040632288\n",
-      "RMSE = 15.149370184199947\tMAE = 6.296508388534638\n",
-      "RMSE = 16.565676405871397\tMAE = 6.445923357890175\n"
+      "RMSE = 13.48852526426804\tMAE = 4.966631585464\tMAE/mean = 0.23053117052915906\n",
+      "RMSE = 11.65794211431183\tMAE = 3.855971027053798\tMAE/mean = 0.30900490157167804\n",
+      "RMSE = 28.63488349231344\tMAE = 10.297829092635011\tMAE/mean = 0.5827278608429205\n",
+      "RMSE = 26.797632083611315\tMAE = 9.645225861037167\tMAE/mean = 0.36862320143601207\n",
+      "RMSE = 14.394730473562012\tMAE = 6.324109040632288\tMAE/mean = 0.20200502145223986\n",
+      "RMSE = 15.149370184199947\tMAE = 6.296508388534638\tMAE/mean = 0.20120496466808574\n",
+      "RMSE = 16.565676405871397\tMAE = 6.445923357890175\tMAE/mean = 0.21550093344206242\n"
      ]
     }
    ],
