convert atom files

--- a/data_process/convert_atom.ipynb
+++ b/data_process/convert_atom.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'/home/cseadmin/data/cys/TrafficFlowModel/data_process'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -23,6 +23,7 @@
     "import matplotlib.pyplot as plt\n",
     "from tqdm import tqdm\n",
     "import networkx as nx\n",
+    "import json\n",
     "\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "InteractiveShell.ast_node_interactivity = \"all\"\n",
@@ -710,6 +711,526 @@
    "outputs": [],
    "source": [
     "# rel_df.to_csv(\"../data/libcity_atom/sz_taxi.rel\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "dyna\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. 给车牌 id，用文件名做 dict\n",
+    "2. 划分轨迹 (按那篇文章)\n",
+    "   * 10min 无点 划分\n",
+    "   * 2min 同一路段 划分 吗?\n",
+    "   * 连续两点之间没路 划分 吗?\n",
+    "3. 转换时间格式 ISO-8601\n",
+    "4. Recover (dij)\n",
+    "5. 时间划分: 15min 现在数据量太小\n",
+    "\n",
+    "\\[dyna_id, type:\"trajectory\", time(ISO-8601), entity_id: 车牌 id, traj_id: 同一车的第几条轨迹, location: road_id, properties: 其他 \\]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20868"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "taxi_dict={}\n",
+    "taxi_counter=0\n",
+    "\n",
+    "for taxi_file in os.listdir(\"../data/taxi_after_proc/tracks\"):\n",
+    "    taxi_license=taxi_file.split(\"_\")[1].split(\".\")[0]\n",
+    "    if taxi_license not in taxi_dict:\n",
+    "        taxi_dict[taxi_license]=taxi_counter\n",
+    "        taxi_counter+=1\n",
+    "        \n",
+    "len(taxi_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 123193/123193 [21:35<00:00, 95.09it/s] \n"
+     ]
+    }
+   ],
+   "source": [
+    "dyna_file=open(\"../data/libcity_atom/sz_taxi_train.dyna\", \"w\")\n",
+    "write_length=dyna_file.write(\"dyna_id,type,time,entity_id,traj_id,location,coordinates,speed\\n\") # disable printing return value\n",
+    "\n",
+    "# df_dyna=pd.DataFrame(columns=[\"dyna_id\", \"type\", \"time\", \"entity_id\", \"traj_id\", \"location\", \"coordinates\", \"speed\"])\n",
+    "dyna_id_counter=0\n",
+    "\n",
+    "for taxi_file in tqdm(os.listdir(\"../data/taxi_after_proc/tracks\")):\n",
+    "    taxi_license=taxi_file.split(\"_\")[1].split(\".\")[0]\n",
+    "    df_taxi=pd.read_csv(f\"../data/taxi_after_proc/tracks/{taxi_file}\", parse_dates=[\"gps_time\"]).dropna() # drop?\n",
+    "    if df_taxi.empty:\n",
+    "        continue\n",
+    "    # df_taxi[\"gps_time\"]=df_taxi[\"gps_time\"].dt.strftime('%Y-%m-%dT%H:%M:%SZ') # ISO-8601\n",
+    "    \n",
+    "    traj_counter=0\n",
+    "    last_time=df_taxi.iloc[0][\"gps_time\"]+pd.Timedelta(seconds=-600)\n",
+    "    for row in df_taxi.itertuples():\n",
+    "        if row[3]-last_time>pd.Timedelta(seconds=600):\n",
+    "            traj_counter+=1\n",
+    "        last_time=row[3]\n",
+    "        \n",
+    "        # df_dyna.loc[len(df_dyna)]=[dyna_id_counter, \"trajectory\", row[3].strftime('%Y-%m-%dT%H:%M:%SZ'), taxi_dict[taxi_license], traj_counter, int(row[8]), [row[2], row[1]], row[4]]\n",
+    "        write_length=dyna_file.write(f\"{dyna_id_counter},trajectory,{row[3].strftime('%Y-%m-%dT%H:%M:%SZ')},{taxi_dict[taxi_license]},{traj_counter},{int(row[8])},\\\"{[row[2], row[1]]}\\\",{row[4]}\\n\")\n",
+    "        dyna_id_counter+=1\n",
+    "        \n",
+    "dyna_file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dyna_id</th>\n",
+       "      <th>type</th>\n",
+       "      <th>time</th>\n",
+       "      <th>entity_id</th>\n",
+       "      <th>traj_id</th>\n",
+       "      <th>location</th>\n",
+       "      <th>coordinates</th>\n",
+       "      <th>speed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>trajectory</td>\n",
+       "      <td>2019-12-07T15:03:46Z</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5503</td>\n",
+       "      <td>[113.8921, 22.556282]</td>\n",
+       "      <td>61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>trajectory</td>\n",
+       "      <td>2019-12-07T15:04:16Z</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4273</td>\n",
+       "      <td>[113.89657, 22.551878]</td>\n",
+       "      <td>93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>trajectory</td>\n",
+       "      <td>2019-12-07T15:05:45Z</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4285</td>\n",
+       "      <td>[113.91115, 22.544533]</td>\n",
+       "      <td>76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>trajectory</td>\n",
+       "      <td>2019-12-07T15:10:46Z</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4757</td>\n",
+       "      <td>[113.925255, 22.542536]</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>trajectory</td>\n",
+       "      <td>2019-12-07T15:12:46Z</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>[113.92694, 22.537136]</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>95</td>\n",
+       "      <td>trajectory</td>\n",
+       "      <td>2019-12-03T00:47:22Z</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3668</td>\n",
+       "      <td>[114.09518, 22.537928]</td>\n",
+       "      <td>47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>96</td>\n",
+       "      <td>trajectory</td>\n",
+       "      <td>2019-12-03T00:48:37Z</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3725</td>\n",
+       "      <td>[114.10475, 22.537636]</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>97</td>\n",
+       "      <td>trajectory</td>\n",
+       "      <td>2019-12-03T00:50:22Z</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6059</td>\n",
+       "      <td>[114.12009, 22.538433]</td>\n",
+       "      <td>71</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>98</td>\n",
+       "      <td>trajectory</td>\n",
+       "      <td>2019-12-03T00:53:07Z</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3903</td>\n",
+       "      <td>[114.14005, 22.557568]</td>\n",
+       "      <td>48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>99</td>\n",
+       "      <td>trajectory</td>\n",
+       "      <td>2019-12-03T00:53:38Z</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3908</td>\n",
+       "      <td>[114.14105, 22.561596]</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    dyna_id        type                  time  entity_id  traj_id  location  \\\n",
+       "0         0  trajectory  2019-12-07T15:03:46Z          0        0      5503   \n",
+       "1         1  trajectory  2019-12-07T15:04:16Z          0        0      4273   \n",
+       "2         2  trajectory  2019-12-07T15:05:45Z          0        0      4285   \n",
+       "3         3  trajectory  2019-12-07T15:10:46Z          0        0      4757   \n",
+       "4         4  trajectory  2019-12-07T15:12:46Z          0        0      3000   \n",
+       "..      ...         ...                   ...        ...      ...       ...   \n",
+       "95       95  trajectory  2019-12-03T00:47:22Z          1        1      3668   \n",
+       "96       96  trajectory  2019-12-03T00:48:37Z          1        1      3725   \n",
+       "97       97  trajectory  2019-12-03T00:50:22Z          1        1      6059   \n",
+       "98       98  trajectory  2019-12-03T00:53:07Z          1        1      3903   \n",
+       "99       99  trajectory  2019-12-03T00:53:38Z          1        1      3908   \n",
+       "\n",
+       "                coordinates  speed  \n",
+       "0     [113.8921, 22.556282]     61  \n",
+       "1    [113.89657, 22.551878]     93  \n",
+       "2    [113.91115, 22.544533]     76  \n",
+       "3   [113.925255, 22.542536]     10  \n",
+       "4    [113.92694, 22.537136]     13  \n",
+       "..                      ...    ...  \n",
+       "95   [114.09518, 22.537928]     47  \n",
+       "96   [114.10475, 22.537636]     50  \n",
+       "97   [114.12009, 22.538433]     71  \n",
+       "98   [114.14005, 22.557568]     48  \n",
+       "99   [114.14105, 22.561596]     53  \n",
+       "\n",
+       "[100 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# df_dyna.to_csv(\"../data/libcity_atom/sz_taxi_train.dyna\", index=False)\n",
+    "df_dyna=pd.read_csv(\"../data/libcity_atom/sz_taxi_train.dyna\", nrows=100)\n",
+    "\n",
+    "df_dyna"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "usr\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>usr_id</th>\n",
+       "      <th>taxi_license</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>粤BDD5290</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>粤BDK3582</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>粤BD04241</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>粤BD03542</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>粤BD45539</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20863</th>\n",
+       "      <td>20863</td>\n",
+       "      <td>粤BDA5623</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20864</th>\n",
+       "      <td>20864</td>\n",
+       "      <td>粤BD68718</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20865</th>\n",
+       "      <td>20865</td>\n",
+       "      <td>粤BD95572</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20866</th>\n",
+       "      <td>20866</td>\n",
+       "      <td>粤BDD7677</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20867</th>\n",
+       "      <td>20867</td>\n",
+       "      <td>粤BD49945</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>20868 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       usr_id taxi_license\n",
+       "0           0     粤BDD5290\n",
+       "1           1     粤BDK3582\n",
+       "2           2     粤BD04241\n",
+       "3           3     粤BD03542\n",
+       "4           4     粤BD45539\n",
+       "...       ...          ...\n",
+       "20863   20863     粤BDA5623\n",
+       "20864   20864     粤BD68718\n",
+       "20865   20865     粤BD95572\n",
+       "20866   20866     粤BDD7677\n",
+       "20867   20867     粤BD49945\n",
+       "\n",
+       "[20868 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "usr_df=pd.DataFrame()\n",
+    "usr_df[\"usr_id\"]=taxi_dict.values()\n",
+    "usr_df[\"taxi_license\"]=taxi_dict.keys()\n",
+    "usr_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# usr_df.to_csv(\"../data/libcity_atom/sz_taxi_train.usr\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "config\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'geo': {'including_types': ['LineString'], 'LineString': {}},\n",
+       " 'rel': {'including_types': ['geo'], 'geo': {'link_weight': 'num'}},\n",
+       " 'usr': {'properties': {'taxi_license': 'str'}},\n",
+       " 'dyna': {'entity_id': 'usr_id',\n",
+       "  'traj_id': 'num',\n",
+       "  'location': 'geo_id',\n",
+       "  'coordinates': 'coordinate',\n",
+       "  'speed': 'num'},\n",
+       " 'info': {'data_files': 'sz_taxi',\n",
+       "  'geo_file': 'sz_taxi',\n",
+       "  'rel_file': 'sz_taxi',\n",
+       "  'weight_col': 'link_weight',\n",
+       "  'init_weight_inf_or_zero': 'zero',\n",
+       "  'set_weight_link_or_dist': 'link',\n",
+       "  'calculate_weight_adj': False}}"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "config={}\n",
+    "\n",
+    "config[\"geo\"]={}\n",
+    "config[\"geo\"][\"including_types\"]=[\"LineString\"]\n",
+    "config[\"geo\"][\"LineString\"]={}\n",
+    "\n",
+    "config[\"rel\"]={}\n",
+    "config[\"rel\"][\"including_types\"]=[\"geo\"]\n",
+    "config[\"rel\"][\"geo\"]={\"link_weight\": \"num\"}\n",
+    "\n",
+    "config[\"usr\"]={}\n",
+    "config[\"usr\"][\"properties\"]={\"taxi_license\": \"str\"}\n",
+    "\n",
+    "config[\"dyna\"]={}\n",
+    "config[\"dyna\"][\"including_types\"]=[\"trajectory\"]\n",
+    "config[\"dyna\"]={\"entity_id\": \"usr_id\", \"traj_id\": \"num\", \"location\": \"geo_id\", \"coordinates\": \"coordinate\", \"speed\": \"num\"}\n",
+    "\n",
+    "config[\"info\"]={}\n",
+    "config[\"info\"][\"data_files\"]=\"sz_taxi\"\n",
+    "config[\"info\"][\"geo_file\"]=\"sz_taxi\"\n",
+    "config[\"info\"][\"rel_file\"]=\"sz_taxi\"\n",
+    "# config[\"info\"][\"data_col\"]=[\"speed\"]\n",
+    "# config[\"info\"][\"output_dim\"]=1\n",
+    "config[\"info\"][\"weight_col\"]=\"link_weight\"\n",
+    "# config[\"info\"][\"time_intervals\"]=60*15\n",
+    "config[\"info\"][\"init_weight_inf_or_zero\"]=\"zero\" # adj matrix not connected: 0 (inf: infinity)\n",
+    "config[\"info\"][\"set_weight_link_or_dist\"]=\"link\" # adj matrix 01 (dist: use weight)\n",
+    "config[\"info\"][\"calculate_weight_adj\"]=False\n",
+    "# config[\"info\"][\"weight_adj_epsilon\"]=0.1 # disabled when the above is false\n",
+    "\n",
+    "config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# json.dump(config, open(\"../data/libcity_atom/config.json\", \"w\", encoding=\"utf-8\"), ensure_ascii=False)"
    ]
   }
  ],
